Adding arquillian support